@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-11-05 patrickh Fixed a bug that prevented the termios abstraction from
+                    opening ports in non-blocking mode.
+                    NEW VERSION: 0.32.1
 2003-11-04 patrickh Eliminated the I/O-related methods setOpenBlocking() and
                     setOpenNonBlocking() in favor of just using setBlocking().
                     NEW VERSION: 0.32.0
